Feb/02.07/SEN/데이터 처리.md
# 데이터 처리

강의 번호: 학습
복습: No
유형: 강의
자료: AI_%25EB%258D%25B0%25EC%259D%25B4%25ED%2584%25B0_%25EC%25B2%2598%25EB%25A6%25AC.pdf
작성일시: 2023년 2월 7일 오전 9:32

# 데이터분석 흐름

- CRISP-DM(Cross-Industry Standard Process for Data Mining)
    
    업무 이해(문제 정의, 정보 도출) → 데이터 이해 → 모델링을 위한 데이터 구조 준비(전처리) → 모델링 → 평가(학습, 검증) → 배포
    
- 예측을 통해 비즈니스 문제 해결(수익, 가치 창출)

# **데이터 전처리**

### ① 데이터 구조 만들기 - 데이터 분서

- 행 : 분석단위
- 열: 정보, 변수

### ② 모델링을 위한 전처리 - ML, DL 모델링

- 모든 셀은 값이 있어야
- 모든 값은 숫자
- 필요치, 숫자의 범위 맞춰야

Nan : not a number

na : not available

# 데이터 프레임 변경

## 열 이름 변경

1. columns
    - 모든 컬럼 이름을 변경
    - 컬럼의 갯수가 맞아야함
    
    ```python
    df.columns = [' 변경할 이름',' 변경할 이름',...]
    ```
    
2. rename
    - 바꿀 컬럼만 지정
    
    ```python
    df.rename(columns = {'이전 칼럼 이름': ' 변경할 이름',
    											'이전 칼럼 이름': ' 변경할 이름',
    											...},inplace = True) 
    									# inplace = True는 df를 변경
    									# inplace = False는 컬럼 변경 후 조회
    ```
    

## 열 삭제

### drop()

- drop() 메소드 사용
- axis = 0 : 행 삭제(기본 값)
- axis = 1 : 열 삭제
- inplace = False: 삭제한 것처럼 조회,  True: 진짜 삭제

```python
# 열 하나 삭제
df.drop('a', axis =1, inplace = True)
# 열 두 개 삭제
df.drop(['a','b'], axis = 1, inplace = True)
```

## 값 변경

- 열 전체 값 변경
    
    ```python
    df['a'] = 0
    ```
    
- 조건에 의한 값 변경
    
    ```python
    # 조건에 의한 값 변경 ①
    df.loc[df['a'] > 2, 'a'] = 0
    # 조건에 의한 값 변경 ②
    np.where(df['a'] > 2, 0, 1)
    ```
    
    > 정렬을 알아서 해줌
    > 
    
    ### df.map
    
    - df.map({’기존값’ : 새로운 값, ….) 함수: 범주형 값을 다른 값으로 변경
        - 범주의 갯수를 맞춰줘야함
    
    ```python
    df['Gen'] = df['Gen'].map({'Male':1, 'Female' : 0})
    ```
    
    ### pd.cut
    
    - 숫자형 변수를 범주형 변수로 변환
        
        ```python
        df['a'] = pd.cut(df['a'], 3, labels= ['c', 'd', 'e'])
        ```
        
        - bins로 원하는 범위 설정
        - bins 내 경계가 n이면 범위는 n-1
        - (0, 10] : 0초과 10이하의 값
        - right = False : 왼쪽 값 이하 오른쪽 값 초과
            
            ```python
            df['a'] = pd.cut(df['a'], 
            									bins = [0,10,20,30], 
            									labels= ['c', 'd', 'e'],
            									right = False)
            
            # bins = [0,10,20,30] -> (0, 10]
            #												(10, 20]
            #												(20, 30]
            
            ```
            

# 데이터 프레임 결합

## pd.concat()

- 매핑 기준: **인덱스(행), 칼럼이름(열)**
- **구조를 기준** 합치기
- 위 아래로 합칠 때 가장 많이 사용

방향 선택

> axis = 0: 행을 추가하는 방향
axis = 1: 열이 늘어나는 방향
> 
- axis = 0: 세로(행)로 합치기(기본값), 칼럼의 구조가 같아야함
- axis = 1: 가로(열)로 합치기, 구조가 같아야함, 인덱스를 기준으로 합치기

방법 선택

- join = ‘outer’ : 모든 행과 열 합치기(기본값)
- join = ‘inner’ : 매핑되는 행과 열만 합치기(교집합)

```python
pd.concat([df1, df2], join = 'outer', axis = 1)
```

## 🌟 pd.merge() (= sql의 join)

- 매핑 기준 : 특정 칼럼(key)의 **값 기준**으로 결합
- 데이터베이스 **테이블 조인**과 같음
- 방향이 없고, 무조건 옆으로 합치기 🌟

방법 선택

how = ‘outer’, ‘inner’, ‘right’, ‘left’

```python
pd.merge(df1, df2, how = 'inner', on = 'A')
```

## pivot

### pivot(행, 열, 값)

- 집계된 데이터를 재구성
- 집계를 반드시 먼저 해야함

```python
df.pivot('A','B','C')
```

# 시계열 데이터

## 시계열 데이터란

- 행과 행에 시간의 순서(흐름)가 있고,
- 🌟 행과 행의 시간간격이 동일한 데이터
- 행과 행 간의 시간의 순서 관계 존재

### 날짜 요소 뽑기

날짜형으로 바꾸기

- **to_datetime**
    
    ```python
    pd.to_datetime(data['A'])
    ```
    

###